--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ subtitle: "Quick thoughts from a software engineer. Or longer ones."
 email: simon.ninon@gmail.com
 name: Simon Ninon
 description: >
-   Blog where I talk of topics I'm passionates about: code, cryptos, personal experiences. And code again.
+   Blog where I talk of topics I'm passionate about: code, cryptos, personal experiences. And code again.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
@@ -41,18 +41,18 @@ jekyll-archives:
     tag: '/tag/:name/'
 
 # Disqus comments
-# disqus_shortname: bencentra
+disqus_shortname: simonninon
 
 # Google analytics
 # ga_tracking_id: "UA-XXXX-1"
 
 # Category descriptions (for archive pages)
-descriptions:
-  - cat: jekyll
-    desc: "Posts describing Jekyll setup techniques."
-
-  - cat: dummy
-    desc: "Just some placeholder posts, lorem ipsum and the rest."
+# descriptions:
+#   - cat: jekyll
+#     desc: "Posts describing Jekyll setup techniques."
+#
+#   - cat: dummy
+#     desc: "Just some placeholder posts, lorem ipsum and the rest."
 
 # Social icons and sharing options
 #
