--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -1,9 +1,28 @@
+- title: Tools
+  items:
+    - name: "Git Book"
+      type: book
+      link: "https://git-scm.com/book/en/v2"
+      description: "A MUST read for any serious developer. You should not even consider asking a git question to someone else if you haven't even read that."
+
+- title: Infrastructure
+  items:
+    - name: "Site Reliability Engineering: How Google Runs Production Systems"
+      type: book
+      link: "https://www.amazon.com/Site-Reliability-Engineering-Production-Systems/dp/149192912X"
+      description: "Interesting reading about how google runs its production environment through its SRE team. One of the best reading I ever had."
+
+    - name: "The Site Reliability Workbook: Practical Ways to Implement SRE"
+      type: book
+      link: "https://www.amazon.com/Site-Reliability-Workbook-Practical-Implement/dp/1492029505"
+      description: "To be read after 'Site Reliability Engineering: How Google Runs Production Systems', provides more hands-on explanations."
+
 - title: Security
   items:
     - name: "The Web Application Hacker's Handbook: Finding and Exploiting Security Flaws"
       type: book
       link: "https://www.amazon.com/Web-Application-Hackers-Handbook-Exploiting/dp/1118026470"
-      description: "Web security knowledge basics that EVERY web serious developer MUST know."
+      description: "Web security knowledge basics that any serious web developer must know."
 
 - title: Web
   items:
@@ -25,36 +44,24 @@
     - name: "QUIC: A UDP-Based Secure and Reliable Transport for HTTP/2"
       type: rfc
       link: "https://tools.ietf.org/html/draft-tsvwg-quic-protocol-00"
-      description: "Draft RFC for the QUIC UDP-based protocol, which will HTTP/3.0 barebone."
+      description: "Draft RFC for the QUIC UDP-based protocol, which will be HTTP/3.0 barebone."
 
     - name: "Google’s QUIC protocol: moving the web from TCP to UDP"
       type: article
       link: "https://ma.ttias.be/googles-quic-protocol-moving-web-tcp-udp/"
       description: "Great introduction to the QUIC protocol & HTTP/3.0."
 
-- title: Infrastructure
-  items:
-    - name: "Site Reliability Engineering: How Google Runs Production Systems"
-      type: book
-      link: "https://www.amazon.com/Site-Reliability-Engineering-Production-Systems/dp/149192912X"
-      description: "Interesting reading about how google runs its production environment through its SRE team. One of the best reading I ever had."
-
-    - name: "The Site Reliability Workbook: Practical Ways to Implement SRE"
-      type: book
-      link: "https://www.amazon.com/Site-Reliability-Workbook-Practical-Implement/dp/1492029505"
-      description: "To be read after 'Site Reliability Engineering: How Google Runs Production Systems', provides more hands-on explanations."
-
 - title: Programming
   items:
     - name: "The C++ Programming Language"
       type: book
       link: "https://www.amazon.fr/gp/product/0321958322/ref=oh_aui_detailpage_o00_s00?ie=UTF8&psc=1"
-      description: "The C++ bible, probably more intended for very advanced C++ developers willing to discover very advance features of the language."
+      description: "The C++ bible, intended for very advanced C++ developers willing to discover very advance features of the language."
 
     - name: "Effective C++: 55 Specific Ways to Improve Your Programs and Designs"
       type: book
       link: "https://www.amazon.fr/gp/product/0321334876/ref=oh_aui_detailpage_o00_s00?ie=UTF8&psc=1"
-      description: "I can't imagine someone calling himself C++ developer without having read that book. Contains some of the core principles of modern C++ developments."
+      description: "I can't imagine someone calling himself C++ developer without having read that book. Contains some of the core principles of modern C++ development."
 
     - name: "More Effective C++: 35 New Ways to Improve Your Programs and Designs"
       type: book
@@ -69,24 +76,17 @@
     - name: "Apprenez à programmer en C"
       type: book
       link: "https://www.amazon.com/Apprenez-%C3%A0-programmer-2e-%C3%A9dition/dp/B006MV70GS/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1546271887&sr=8-1"
-      description: "French book introducing C language, intended for beginners. This is the first ever CS book I ever read when I was a teenage: it made me love programming and truly changed my life."
+      description: "French book introducing C language, intended for beginners. This is the first CS book I have ever read: it made me love programming while I was just a teenage."
 
     - name: "Programmez en orienté objet en PHP"
       type: book
       link: "https://www.amazon.com/Programmez-orient%C3%A9-objet-PHP/dp/B00AENY5T0/ref=tmm_hrd_swatch_0?_encoding=UTF8&qid=1546271887&sr=8-4-fkmr0"
-      description: "French book introducing web development with PHP. Should be coupled with a book providing web knowledge basics if possible. Second CS book I read when I was a teenage and made me discover about web."
+      description: "French book introducing web development with PHP. Should be coupled with a book providing web knowledge basics if possible. Second CS book I read when I was a teenage that introduced me to web."
 
     - name: "ISO-8601, YYYY, yyyy, and why your year may be wrong"
       type: article
       link: "https://ericasadun.com/2018/12/25/iso-8601-yyyy-yyyy-and-why-your-year-may-be-wrong/"
       description: "Short reading clarifying yyyy and YYYY difference in date formatting"
-
-- title: Tools
-  items:
-    - name: "Git Book"
-      type: book
-      link: "https://git-scm.com/book/en/v2"
-      description: "A MUST read for any serious developer. You should not even consider asking a git question to someone else if you haven't even read that."
 
 - title: Algorithms
   items:
